--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -34,7 +34,7 @@
             <div class="main_title">
               <h2>Top Selling</h2>
               <span>Products</span>
-              <p>Cum doctus civibus efficiantur in imperdiet deterruisset</p>
+              <p>Top Selling Products</p>
             </div>
             <div class="row small-gutters">
               <!-- <div class="col-6 col-md-4 col-xl-3">
@@ -64,20 +64,20 @@
               <!-- /col -->
             
               <!-- /col -->
-              <div class="col-6 col-md-4 col-xl-3">
+              <div *ngFor="let Product of Products" class="col-6 col-md-4 col-xl-3">
                 <div class="grid_item">
-                  <span class="ribbon hot">Hot</span>
+                  <span class="ribbon hot">{{Product.category}}</span>
                   <figure>
                     <a href="product-detail-1.html">
-                      <img class="img-fluid lazy" src="assets/img/products/product_placeholder_square_medium.jpg" data-src="img/products/shoes/8.jpg" alt="">
-                      <img class="img-fluid lazy" src="assets/img/products/product_placeholder_square_medium.jpg" data-src="img/products/shoes/8_b.jpg" alt="">
+                      <img class="img-fluid lazy" [src]="Product.image"  alt="">
+                      <img class="img-fluid lazy" [src]="Product.image" alt="">
                     </a>
                   </figure>
                   <a href="product-detail-1.html">
-                    <h3>Armor Air Max 720</h3>
+                    <h3>{{Product.name}}</h3>
                   </a>
                   <div class="price_box">
-                    <span class="new_price">$120.00</span>
+                    <span class="new_price">${{Product.price}}</span>
                   </div>
                   <ul>
                     <li><a href="#0" class="tooltip-1" data-toggle="tooltip" data-placement="left" title="Add to favorites"><i class="ti-heart"></i><span>Add to favorites</span></a></li>
@@ -98,26 +98,26 @@
             <div class="main_title">
               <h2>Top Trending</h2>
               <span>Products</span>
-              <p>Cum doctus civibus efficiantur in imperdiet deterruisset</p>
+              <p>Top Trending Items</p>
             </div>
             <div class="row small-gutters">
        
             
               <!-- /col -->
-              <div class="col-6 col-md-4 col-xl-3">
+              <div *ngFor="let Product of Products" class="col-6 col-md-4 col-xl-3">
                 <div class="grid_item">
-                  <span class="ribbon hot">Hot</span>
+                  <span class="ribbon hot">{{Product.category}}</span>
                   <figure>
                     <a href="product-detail-1.html">
-                      <img class="img-fluid lazy" src="assets/img/products/product_placeholder_square_medium.jpg" data-src="img/products/shoes/8.jpg" alt="">
-                      <img class="img-fluid lazy" src="assets/img/products/product_placeholder_square_medium.jpg" data-src="img/products/shoes/8_b.jpg" alt="">
+                      <img class="img-fluid lazy" [src]="Product.image" alt="">
+                      <img class="img-fluid lazy" [src]="Product.image" alt="">
                     </a>
                   </figure>
                   <a href="product-detail-1.html">
-                    <h3>Armor Air Max 720</h3>
+                    <h3>{{Product.name}}</h3>
                   </a>
                   <div class="price_box">
-                    <span class="new_price">$120.00</span>
+                    <span class="new_price">${{Product.price}}</span>
                   </div>
                   <ul>
                     <li><a href="#0" class="tooltip-1" data-toggle="tooltip" data-placement="left" title="Add to favorites"><i class="ti-heart"></i><span>Add to favorites</span></a></li>
@@ -139,26 +139,26 @@
             <div class="main_title">
               <h2>Featured Products</h2>
               <span>Products</span>
-              <p>Cum doctus civibus efficiantur in imperdiet deterruisset</p>
+              <p>Featured Items</p>
             </div>
             <div class="row small-gutters">
        
             
               <!-- /col -->
-              <div class="col-6 col-md-4 col-xl-3">
+              <div *ngFor="let Product of Products" class="col-6 col-md-4 col-xl-3">
                 <div class="grid_item">
-                  <span class="ribbon hot">Hot</span>
+                  <span class="ribbon hot">{{Product.category}}</span>
                   <figure>
                     <a href="product-detail-1.html">
-                      <img class="img-fluid lazy" src="assets/img/products/product_placeholder_square_medium.jpg" data-src="img/products/shoes/8.jpg" alt="">
-                      <img class="img-fluid lazy" src="assets/img/products/product_placeholder_square_medium.jpg" data-src="img/products/shoes/8_b.jpg" alt="">
+                      <img class="img-fluid lazy" [src]="Product.image" alt="">
+                      <img class="img-fluid lazy" [src]="Product.image" alt="">
                     </a>
                   </figure>
                   <a href="product-detail-1.html">
-                    <h3>Armor Air Max 720</h3>
+                    <h3>{{Product.name}}</h3>
                   </a>
                   <div class="price_box">
-                    <span class="new_price">$120.00</span>
+                    <span class="new_price">${{Product.price}}</span>
                   </div>
                   <ul>
                     <li><a href="#0" class="tooltip-1" data-toggle="tooltip" data-placement="left" title="Add to favorites"><i class="ti-heart"></i><span>Add to favorites</span></a></li>
