--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,4 +1,4 @@
-
+<app-slider></app-slider>
           <ul id="banners_grid" class="clearfix">
             <li>
               <a href="#0" class="img_container">
@@ -68,12 +68,12 @@
                 <div class="grid_item">
                   <span class="ribbon hot">{{Product.category}}</span>
                   <figure>
-                    <a href="product-detail-1.html">
+                    <a [routerLink]="['/product']">
                       <img class="img-fluid lazy" [src]="Product.image"  alt="">
                       <img class="img-fluid lazy" [src]="Product.image" alt="">
                     </a>
                   </figure>
-                  <a href="product-detail-1.html">
+                  <a [routerLink]="['/product']">
                     <h3>{{Product.name}}</h3>
                   </a>
                   <div class="price_box">
@@ -108,12 +108,12 @@
                 <div class="grid_item">
                   <span class="ribbon hot">{{Product.category}}</span>
                   <figure>
-                    <a href="product-detail-1.html">
+                    <a [routerLink]="['/product']">
                       <img class="img-fluid lazy" [src]="Product.image" alt="">
                       <img class="img-fluid lazy" [src]="Product.image" alt="">
                     </a>
                   </figure>
-                  <a href="product-detail-1.html">
+                  <a [routerLink]="['/product']">
                     <h3>{{Product.name}}</h3>
                   </a>
                   <div class="price_box">
@@ -149,12 +149,12 @@
                 <div class="grid_item">
                   <span class="ribbon hot">{{Product.category}}</span>
                   <figure>
-                    <a href="product-detail-1.html">
+                    <a [routerLink]="['/product']">
                       <img class="img-fluid lazy" [src]="Product.image" alt="">
                       <img class="img-fluid lazy" [src]="Product.image" alt="">
                     </a>
                   </figure>
-                  <a href="product-detail-1.html">
+                  <a [routerLink]="['/product']">
                     <h3>{{Product.name}}</h3>
                   </a>
                   <div class="price_box">
