--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -134,7 +134,7 @@
                 <span>Total</span> $247.00
             </li>
         </ul>
-        <a href="cart-2.html" class="btn_1 full-width cart">Proceed to Checkout</a>
+        <a routerLink="/checkout" class="btn_1 full-width cart">Proceed to Checkout</a>
                 </div>
             </div>
         </div>
