--- a/src/app/topheader/topheader.component.html
+++ b/src/app/topheader/topheader.component.html
@@ -319,7 +319,7 @@
                                               <li><a href="index-4.html">Home shop 4</a></li>
                                           </ul> -->
                                       </li>
-                                      <li class="mega_items"><a href="shop.html">shop<i class="fa fa-angle-down"></i></a>
+                                      <!-- <li class="mega_items"><a href="shop.html">shop<i class="fa fa-angle-down"></i></a>
                                           <div class="mega_menu">
                                               <ul class="mega_menu_inner">
                                                   <li><a href="#">Shop Layouts</a>
@@ -351,25 +351,14 @@
                                                   </li>
                                               </ul>
                                           </div>
+                                      </li> -->
+                                      <li><a routerLink="/">My Account</a>
                                       </li>
-                                      <li><a href="blog.html">blog<i class="fa fa-angle-down"></i></a>
-                                          <ul class="sub_menu pages">
-                                              <li><a href="blog-details.html">blog details</a></li>
-                                              <li><a href="blog-fullwidth.html">blog fullwidth</a></li>
-                                              <li><a href="blog-sidebar.html">blog sidebar</a></li>
-                                          </ul>
+                                      <li><a routerLink="/cart">Cart</a>
                                       </li>
-                                      <li><a href="#">pages <i class="fa fa-angle-down"></i></a>
-                                          <ul class="sub_menu pages">
-                                              <li><a href="about.html">About Us</a></li>
-                                              <li><a href="services.html">services</a></li>
-                                              <li><a href="faq.html">Frequently Questions</a></li>
-                                              <li><a href="contact.html">contact</a></li>
-                                              <li><a href="login.html">login</a></li>
-                                              <li><a href="404.html">Error 404</a></li>
-                                          </ul>
+                                      <li><a routerLink="/checkout">Checkout</a>
                                       </li>
-                                      <li><a href="contact.html"> Contact Us</a></li>
+                                      <li><a href="/"> Contact Us</a></li>
                                   </ul>
                               </nav>
                           </div>
