--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -46,8 +46,9 @@ Author URI: http://themeforest.net/user/Ansonika/
 }
 
 :root {
-  --main-header-bg-color: #004dda;
-  --main-primary-color: #004dda;
+  --site-primary-color:#21B9E8;
+  --main-header-bg-color: var(--site-primary-color);
+  --main-primary-color: var(--site-primary-color);
 }
 [class*='header-']:before {
   display: inline-block;
@@ -1874,7 +1875,7 @@ hr {
   color: #777;
 }
 .breadcrumbs ul li a:hover {
-  color: #004dda;
+  color: var(--site-primary-color);
 }
 .breadcrumbs ul li:after {
   font-family: 'themify';
@@ -1896,7 +1897,7 @@ hr {
 
 /*General links color*/
 a {
-  color: #004dda;
+  color: var(--site-primary-color);
   text-decoration: none;
   -moz-transition: all 0.3s ease-in-out;
   -o-transition: all 0.3s ease-in-out;
@@ -1916,7 +1917,7 @@ a.btn_1,
 .btn_1 {
   border: none;
   color: #fff;
-  background: #004dda;
+  background: var(--site-primary-color);
   outline: none;
   cursor: pointer;
   display: inline-block;
@@ -1969,8 +1970,8 @@ a.btn_1.outline,
 }
 a.btn_1.outline:hover,
 .btn_1.outline:hover {
-  border-color: #004dda;
-  color: #004dda !important;
+  border-color: var(--site-primary-color);
+  color: var(--site-primary-color) !important;
 }
 a.btn_1.outline:focus,
 .btn_1.outline:focus {
@@ -2015,7 +2016,7 @@ main.freeze {
   line-height: 1;
 }
 .top_line.promo {
-  background-color: #004dda;
+  background-color: var(--site-primary-color);
   text-align: center;
   color: #fff;
   font-size: 14px;
@@ -2029,7 +2030,7 @@ main.freeze {
 }
 .top_line.version_1 {
   color: #fff;
-  background-color: #004dda;
+  background-color: var(--site-primary-color);
   font-size: 13px;
   font-size: 0.8125rem;
 }
@@ -2286,7 +2287,7 @@ header ul.top_tools > li .dropdown-access .dropdown-menu a.btn_1.outline {
 header ul.top_tools > li .dropdown-cart .dropdown-menu a.btn_1:hover,
 header ul.top_tools > li .dropdown-access .dropdown-menu a.btn_1:hover {
   color: #fff !important;
-  background-color: #004dda;
+  background-color: var(--site-primary-color);
 }
 header .main_nav {
   position: relative;
@@ -2341,7 +2342,7 @@ header .main_nav .custom-search-input button[type='submit'] {
   background: none;
 }
 header .main_nav .custom-search-input button[type='submit']:hover {
-  color: #004dda;
+  color: var(--site-primary-color);
 }
 header .sticky_element {
   width: 100%;
@@ -2365,7 +2366,7 @@ header .sticky_element {
   }
 }
 header.version_1 .main_header {
-  background-color: var(--main-header-bg-color);
+  background-color: var(--site-primary-color);
 }
 header.version_1 .main_header a.phone_top {
   color: #fff;
@@ -2419,11 +2420,11 @@ header.version_1 .main_header ul.top_tools > li a.cart_bt strong {
 }
 header.version_1 .main_header ul.top_tools > li .dropdown-cart .dropdown-menu,
 header.version_1 .main_header ul.top_tools > li .dropdown-access .dropdown-menu {
-  border-top: 2px solid #004dda;
+  border-top: 2px solid var(--site-primary-color);
 }
 header.version_1 .main_header ul.top_tools > li .dropdown-cart .dropdown-menu:before,
 header.version_1 .main_header ul.top_tools > li .dropdown-access .dropdown-menu:before {
-  border-bottom-color: #004dda;
+  border-bottom-color: var(--site-primary-color);
 }
 header.version_1 .main_header ul.top_tools > li .dropdown-cart:hover > a,
 header.version_1 .main_header ul.top_tools > li .dropdown-access:hover > a {
@@ -2449,7 +2450,7 @@ header.version_1 .main_nav ul.top_tools > li a {
   color: #111;
 }
 header.version_1 .main_nav ul.top_tools > li a:hover {
-  color: #004dda;
+  color: var(--site-primary-color);
 }
 header.version_1 .main_nav ul.top_tools > li a.btn_cat_mob .hamburger-inner,
 header.version_1 .main_nav ul.top_tools > li a.btn_cat_mob .hamburger-inner::before,
@@ -2459,7 +2460,7 @@ header.version_1 .main_nav ul.top_tools > li a.btn_cat_mob .hamburger-inner::aft
 header.version_1 .main_nav ul.top_tools > li a.btn_cat_mob:hover .hamburger-inner,
 header.version_1 .main_nav ul.top_tools > li a.btn_cat_mob:hover .hamburger-inner::before,
 header.version_1 .main_nav ul.top_tools > li a.btn_cat_mob:hover .hamburger-inner::after {
-  background-color: #004dda;
+  background-color: var(--site-primary-color);
 }
 header.version_1 .main_nav ul.top_tools > li a.cart_bt strong {
   background-color: #083487;
@@ -2467,15 +2468,15 @@ header.version_1 .main_nav ul.top_tools > li a.cart_bt strong {
 }
 header.version_1 .main_nav ul.top_tools > li .dropdown-cart .dropdown-menu,
 header.version_1 .main_nav ul.top_tools > li .dropdown-access .dropdown-menu {
-  border-top: 2px solid #004dda;
+  border-top: 2px solid var(--site-primary-color);
   margin-top: 0;
 }
 header.version_1 .main_nav ul.top_tools > li .dropdown-cart .dropdown-menu:before,
 header.version_1 .main_nav ul.top_tools > li .dropdown-access .dropdown-menu:before {
-  border-bottom-color: #004dda;
+  border-bottom-color: var(--site-primary-color);
 }
 header.version_1 .main_nav ul.top_tools > li .dropdown-cart:hover > a, header.version_1 .main_nav ul.top_tools > li .dropdown-access:hover > a {
-  color: #004dda;
+  color: var(--site-primary-color);
 }
 
 header.version_2 .main_header {
@@ -2489,7 +2490,7 @@ header.version_2 .main_header .hamburger-inner::after {
 header.version_2 .main_header:hover .hamburger-inner,
 header.version_2 .main_header:hover .hamburger-inner::before,
 header.version_2 .main_header:hover .hamburger-inner::after {
-  background-color: #004dda;
+  background-color: var(--site-primary-color);
 }
 header.version_2 .main_header a.phone_top {
   color: #444;
@@ -2530,7 +2531,7 @@ header.version_2 .main_header ul.top_tools > li a {
   }
 }
 header.version_2 .main_header ul.top_tools > li a:hover {
-  color: #004dda;
+  color: var(--site-primary-color);
 }
 header.version_2 .main_header ul.top_tools > li a.cart_bt strong {
   background-color: #083487;
@@ -2551,7 +2552,7 @@ header.version_2 .main_header ul.top_tools > li .dropdown-access .dropdown-menu:
 }
 header.version_2 .main_header ul.top_tools > li .dropdown-cart:hover > a,
 header.version_2 .main_header ul.top_tools > li .dropdown-access:hover > a {
-  color: #004dda;
+  color: var(--site-primary-color);
 }
 @media (max-width: 991px) {
   header.version_2 .main_header ul.top_tools {
@@ -2561,7 +2562,7 @@ header.version_2 .main_header ul.top_tools > li .dropdown-access:hover > a {
   }
 }
 header.version_2 .main_nav {
-  background-color: #004dda;
+  background-color: var(--site-primary-color);
   border-bottom: 1px solid transparent;
 }
 header.version_2 .main_nav .custom-search-input {
@@ -2692,7 +2693,7 @@ header.version_2 .main-menu > ul > li > a, .main-menu > ul > li.submenu:hover > 
 }
 
 header.version_2 .main-menu > ul > li:hover > a {
-  color: #004dda;
+  color: var(--site-primary-color);
 }
 
 header.version_2 .main-menu ul > li.submenu > a:after {
@@ -2700,7 +2701,7 @@ header.version_2 .main-menu ul > li.submenu > a:after {
 }
 
 header.version_2 .main-menu > ul > li.submenu:hover > a:after {
-  color: #004dda;
+  color: var(--site-primary-color);
 }
 
 #header_menu {
@@ -2794,7 +2795,7 @@ nav a.open_close#close_in > i:hover {
   }
 
   .main-menu ul ul li:hover > a {
-    color: #004dda;
+    color: var(--site-primary-color);
     background-color: #0044c2;
     background-color: rgba(0, 77, 218, 0.05);
   }
@@ -2865,7 +2866,7 @@ nav a.open_close#close_in > i:hover {
   .main-menu ul li a:hover,
   a.show-submenu:hover,
   a.show-submenu-mega:hover {
-    color: #004dda !important;
+    color: var(--site-primary-color) !important;
     background-color: #0044c2;
     background-color: rgba(0, 77, 218, 0.05);
   }
@@ -3032,7 +3033,7 @@ nav a.open_close#close_in > i:hover {
   font-weight: normal;
 }
 .dropdown-cart .dropdown-menu ul li a strong:hover {
-  color: #004dda;
+  color: var(--site-primary-color);
 }
 
 .dropdown-access .dropdown-menu {
@@ -3069,8 +3070,8 @@ nav a.open_close#close_in > i:hover {
   left: 15px;
 }
 .dropdown-access .dropdown-menu ul li a:hover {
-  border-left: 2px solid #004dda;
-  color: #004dda !important;
+  border-left: 2px solid var(--site-primary-color);
+  color: var(--site-primary-color) !important;
   background-color: #0044c2;
   background-color: rgba(0, 77, 218, 0.04);
 }
@@ -3137,7 +3138,7 @@ nav a.open_close#close_in > i:hover {
   -moz-box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.175);
   box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.175);
   z-index: 99;
-  border-top: 2px solid #004dda;
+  border-top: 2px solid var(--site-primary-color);
 }
 .menu ul li ul li {
   display: block;
@@ -3167,7 +3168,7 @@ nav a.open_close#close_in > i:hover {
   background-color: rgba(0, 77, 218, 0.04);
 }
 .menu ul li ul li a.active {
-  color: #004dda;
+  color: var(--site-primary-color);
   background-color: #0044c2;
   background-color: rgba(0, 77, 218, 0.04);
 }
@@ -3178,7 +3179,7 @@ nav a.open_close#close_in > i:hover {
   font-size: 21px;
   font-size: 1.3125rem;
   margin-top: 0;
-  color: #004dda;
+  color: var(--site-primary-color);
 }
 @media (max-width: 767px) {
   .menu ul li ul li a.active:after {
@@ -3242,20 +3243,20 @@ header.version_1 .menu ul li > span a .hamburger-inner::after {
   background-color: #111;
 }
 header.version_1 .menu ul li > span a:hover {
-  color: #004dda;
+  color: var(--site-primary-color);
 }
 header.version_1 .menu ul li > span a:hover .hamburger-inner,
 header.version_1 .menu ul li > span a:hover .hamburger-inner::before,
 header.version_1 .menu ul li > span a:hover .hamburger-inner::after {
-  background-color: #004dda;
+  background-color: var(--site-primary-color);
 }
 header.version_1 .menu ul li > span a.active {
-  color: #004dda;
+  color: var(--site-primary-color);
 }
 header.version_1 .menu ul li > span a.active .hamburger-inner,
 header.version_1 .menu ul li > span a.active .hamburger-inner::before,
 header.version_1 .menu ul li > span a.active .hamburger-inner::after {
-  background-color: #004dda;
+  background-color: var(--site-primary-color);
 }
 header.version_1 .menu ul li ul li a {
   color: #444;
@@ -3290,7 +3291,7 @@ header.version_2 .menu ul li ul li a {
   color: #444 !important;
 }
 header.version_2 .menu ul li ul li a:hover {
-  color: #004dda !important;
+  color: var(--site-primary-color) !important;
 }
 
 header.version_2 .menu ul li ul {
@@ -4547,7 +4548,7 @@ body.modal-open .mm-slideout {
   font-size: 36px;
   font-size: 2.25rem;
   margin: 0 20px 0 0;
-  color: #004dda;
+  color: var(--site-primary-color);
 }
 .feat ul li p {
   margin: 0;
@@ -4650,7 +4651,7 @@ body.modal-open .mm-slideout {
   padding: 0;
 }
 .grid_item ul li a:hover {
-  background-color: #004dda;
+  background-color: var(--site-primary-color);
 }
 .grid_item ul li a:hover i {
   color: #fff;
@@ -4681,7 +4682,7 @@ body.modal-open .mm-slideout {
   display: inline-block;
 }
 .grid_item a h3:hover {
-  color: #004dda;
+  color: var(--site-primary-color);
 }
 .grid_item .price_box {
   margin-bottom: 5px;
@@ -4714,7 +4715,7 @@ body.modal-open .mm-slideout {
   display: inline-block;
 }
 .rating em a:hover {
-  color: #004dda;
+  color: var(--site-primary-color);
 }
 
 @-webkit-keyframes fadeIn {
@@ -4739,7 +4740,7 @@ body.modal-open .mm-slideout {
   }
 }
 .new_price {
-  color: #004dda;
+  color: var(--site-primary-color);
   font-weight: 500;
   font-size: 16px;
   font-size: 1rem;
@@ -4838,7 +4839,7 @@ body.modal-open .mm-slideout {
 .owl-theme .owl-dots .owl-dot.active span,
 .owl-theme .owl-dots .owl-dot:hover span {
   background: transparent !important;
-  border: 2px solid #004dda;
+  border: 2px solid var(--site-primary-color);
   -moz-transition: all 0.3s ease-in-out;
   -o-transition: all 0.3s ease-in-out;
   -webkit-transition: all 0.3s ease-in-out;
@@ -4859,7 +4860,7 @@ body.modal-open .mm-slideout {
 }
 .owl-theme .owl-dots .owl-dot span::before {
   content: '';
-  background-color: #004dda !important;
+  background-color: var(--site-primary-color) !important;
   display: block;
   border-radius: 50%;
   width: 8px;
@@ -4927,7 +4928,7 @@ body.modal-open .mm-slideout {
 }
 .owl-prev i:hover,
 .owl-next i:hover {
-  color: #004dda;
+  color: var(--site-primary-color);
 }
 
 .owl-prev.disabled i:hover,
@@ -5018,7 +5019,7 @@ body.modal-open .mm-slideout {
   background: none;
 }
 .search-input button[type='submit']:hover {
-  color: #004dda;
+  color: var(--site-primary-color);
 }
 .search-input.white input[type='text'] {
   background-color: #fff;
@@ -5069,7 +5070,7 @@ input.qty2:focus {
   color: #999;
 }
 .button_inc:hover {
-  color: #004dda;
+  color: var(--site-primary-color);
 }
 
 .dec {
@@ -5170,7 +5171,7 @@ input.qty2:focus {
   cursor: pointer;
 }
 .container_check input:checked ~ .checkmark {
-  background-color: #004dda;
+  background-color: var(--site-primary-color);
   border: 1px solid transparent;
 }
 .container_check .checkmark {
@@ -5255,7 +5256,7 @@ input.qty2:focus {
   width: 12px;
   height: 12px;
   border-radius: 50%;
-  background: #004dda;
+  background: var(--site-primary-color);
   -moz-transition: all 0.3s ease-in-out;
   -o-transition: all 0.3s ease-in-out;
   -webkit-transition: all 0.3s ease-in-out;
@@ -5499,14 +5500,14 @@ ul.list_ok li:last-child {
 .top_panel .related .item_panel a h5 {
   font-size: 14px;
   font-size: 0.875rem;
-  color: #004dda;
+  color: var(--site-primary-color);
   padding-top: 5px;
   margin: 0 0 3px 0;
   font-weight: 400;
   color: #444;
 }
 .top_panel .related .item_panel a h5:hover {
-  color: #004dda;
+  color: var(--site-primary-color);
 }
 .top_panel .related .item_panel figure {
   width: 60px;
@@ -5611,7 +5612,7 @@ ul.list_ok li:last-child {
   transform: translateY(-50%);
 }
 #toTop:hover {
-  background-color: #004dda;
+  background-color: var(--site-primary-color);
 }
 
 .modal-content {
@@ -6489,7 +6490,7 @@ footer .links ul li a:after {
   -moz-border-radius: 0 3px 3px 0;
   -ms-border-radius: 0 3px 3px 0;
   border-radius: 0 3px 3px 0;
-  background-color: #004dda;
+  background-color: var(--site-primary-color);
   -moz-transition: all 0.3s ease-in-out;
   -o-transition: all 0.3s ease-in-out;
   -webkit-transition: all 0.3s ease-in-out;
@@ -6646,7 +6647,7 @@ ul.additional_links li:after {
   background: #bb0000;
 }
 #cookie-bar .cb-policy {
-  background: #004dda;
+  background: var(--site-primary-color);
 }
 #cookie-bar .cb-policy:hover {
   background: #fff;
