--- a/src/app/topheader/topheader.component.html
+++ b/src/app/topheader/topheader.component.html
@@ -181,7 +181,8 @@
                       <div class="col-lg-3">
                           <div class="categories_menu">
                               <div class="categories_title">
-                                  <h2 class="categori_toggle">All Cattegories</h2>
+                               <h6 style="display: inline; color: white; font-weight: bold;"> <span class="lnr lnr-menu"></span></h6>
+                                  <h2 style="display: inline;" class="categori_toggle">All Cattegories</h2>
                               </div>
                               <div class="categories_menu_toggle">
                                   <ul>
@@ -374,6 +375,8 @@
           </div>
       </div>
   </header>
+
+  
 
 
 
