--- a/src/app/topheader/topheader.component.scss
+++ b/src/app/topheader/topheader.component.scss
@@ -1,5 +1,5 @@
 .categories_menu{
-    display: none;
+   // display: none;
 }
 
 
@@ -1196,30 +1196,30 @@ $small-mobile: 'only screen and (max-width: 479px)';
         padding-left: 35px;
         position: relative;
         color: #fff;
-        &::before {
-            content: "\f394";
-            font-family: "Ionicons";
-            color: #fff;
-            display: block;
-            position: absolute;
-            font-size: 22px;
-            line-height: 0px;
-            left: 0;
-            top: 50%;
-            transform: translatey(-50%);
-        }
-        &::after {
-            content: "\f3d0";
-            font-family: "Ionicons";
-            color: #fff;
-            display: block;
-            position: absolute;
-            font-size: 13px;
-            line-height: 0px;
-            right: 17px;
-            top: 50%;
-            transform: translatey(-50%);
-        }
+        // &::before {
+        //     content: "\f394";
+        //     font-family: "Ionicons";
+        //     color: #fff;
+        //     display: block;
+        //     position: absolute;
+        //     font-size: 22px;
+        //     line-height: 0px;
+        //     left: 0;
+        //     top: 50%;
+        //     transform: translatey(-50%);
+        // }
+        // &::after {
+        //     content: "\f3d0";
+        //     font-family: "Ionicons";
+        //     color: #fff;
+        //     display: block;
+        //     position: absolute;
+        //     font-size: 13px;
+        //     line-height: 0px;
+        //     right: 17px;
+        //     top: 50%;
+        //     transform: translatey(-50%);
+        // }
         @media #{$tablet-device} {
             line-height: 45px;
             float: inherit;
