--- a/src/app/aboutus/aboutus.component.html
+++ b/src/app/aboutus/aboutus.component.html
@@ -1,1 +1,197 @@
-<p>aboutus works!</p>
+<div class="bg_gray">
+    <div class="top_banner general">
+        <div class="opacity-mask d-flex align-items-md-center" data-opacity-mask="rgba(0, 0, 0, 0.1)">
+            <div class="container">
+                <div class="row justify-content-end">
+                    <div class="col-lg-8 col-md-6 text-right">
+                        <h1>Dolor docendi fuisset ad<br>movet mucius diceret et qui</h1>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <img src="assets/img/top_about.jpg" class="img-fluid" alt="">
+    </div>
+    <!--/top_banner-->
+    
+    <div class="bg_white">
+    <div class="container margin_90_0">
+        <div class="row justify-content-between align-items-center flex-lg-row-reverse content_general_row">
+            <div class="col-lg-5 text-center">
+                <figure><img src="assets/img/about_1.svg" data-src="assets/img/about_1.svg" alt="" class="img-fluid lazy" width="350" height="268"></figure>
+            </div>
+            <div class="col-lg-6">
+                <h2>Per quot choro cetero eu</h2>
+                <p class="lead">Eu qui mundi lucilius petentium, mea amet libris prodesset in.</p>
+                <p>His dolor docendi fuisset ad, movet mucius diceret et qui. Esse ferri integre sit id. Nec iusto eleifend definitionem ne, persius argumentum sed ut. Ut mel dicta latine. Ut dicta tempor omittantur pro, ne mea magna idque. Nulla ancillae et his, ei vim lorem accusam.</p>
+            </div>
+        </div>
+        <!--/row-->
+        <div class="row justify-content-between align-items-center content_general_row">
+            <div class="col-lg-5 text-left">
+                <figure><img src="assets/img/about_3.svg" data-src="assets/img/about_3.svg" alt="" class="img-fluid lazy" width="350" height="268"></figure>
+            </div>
+            <div class="col-lg-6">
+                <h2>Per quot choro cetero eu</h2>
+                <p class="lead">Eu qui mundi lucilius petentium, mea amet libris prodesset in.</p>
+                <p>His dolor docendi fuisset ad, movet mucius diceret et qui. Esse ferri integre sit id. Nec iusto eleifend definitionem ne, persius argumentum sed ut. Ut mel dicta latine. Ut dicta tempor omittantur pro, ne mea magna idque. Nulla ancillae et his, ei vim lorem accusam.</p>
+            </div>
+        </div>
+        <!--/row-->
+        <div class="row justify-content-between align-items-center flex-lg-row-reverse content_general_row">
+            <div class="col-lg-5 text-center">
+                <figure><img src="assets/img/about_2.svg" data-src="assets/img/about_2.svg" alt="" class="img-fluid lazy" width="350" height="316"></figure>
+            </div>
+            <div class="col-lg-6">
+                <h2>Per quot choro cetero eu</h2>
+                <p class="lead">Eu qui mundi lucilius petentium, mea amet libris prodesset in.</p>
+                <p>His dolor docendi fuisset ad, movet mucius diceret et qui. Esse ferri integre sit id. Nec iusto eleifend definitionem ne, persius argumentum sed ut. Ut mel dicta latine.</p>
+                <ul class="list_ok">
+                    <li>At pro tale omnes iuvaret</li>
+                    <li>Persius argumentum sed ut tempor omittantur pro</li>
+                    <li>His dolor docendi fuisset ad, movet mucius</li>
+                </ul>
+            </div>
+        </div>
+        <!--/row-->
+    </div>
+    <!--/container-->
+        
+    </div>
+    <!--/bg_white-->
+    <div id="carousel-home">
+        <div class="owl-carousel owl-theme">
+            <div class="owl-slide cover" style="background-image: url(/assets/img/about_2.svg);">
+                <div class="opacity-mask d-flex align-items-center" data-opacity-mask="rgba(0, 0, 0, 0.5)">
+                    <div class="container">
+                        <div class="row justify-content-center justify-content-md-start">
+                            <div class="col-lg-6 static">
+                                <div class="slide-text white">
+                                    <h2 class="owl-slide-animated owl-slide-title">"Awesome Experience"</h2>
+                                    <p class="owl-slide-animated owl-slide-subtitle">
+                                        <em>His dolor docendi fuisset ad, movet mucius diceret et qui. Esse ferri integre sit id. Nec iusto eleifend definitionem ne, persius argumentum sed ut.</em>
+                                    </p>
+                                    <div class="owl-slide-animated owl-slide-cta"><small>Susan - Photographer</small></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!--/owl-slide-->
+            <div class="owl-slide cover" style="background-image: url(assets/img/about_2.svg);">
+                <div class="opacity-mask d-flex align-items-center" data-opacity-mask="rgba(0, 0, 0, 0.5)">
+                    <div class="container">
+                        <div class="row justify-content-center justify-content-md-start">
+                            <div class="col-lg-6 static">
+                                <div class="slide-text white">
+                                    <h2 class="owl-slide-animated owl-slide-title">"Great Support"</h2>
+                                    <p class="owl-slide-animated owl-slide-subtitle">
+                                        <em>His dolor docendi fuisset ad, movet mucius diceret et qui. Esse ferri integre sit id. Nec iusto eleifend definitionem ne.</em>
+                                    </p>
+                                    <div class="owl-slide-animated owl-slide-cta">Mary - Doctor</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!--/owl-slide-->
+            <div class="owl-slide cover" style="background-image: url(assets/img/about_2.svg);">
+                <div class="opacity-mask d-flex align-items-center" data-opacity-mask="rgba(255, 255, 255, 0.5)">
+                    <div class="container">
+                        <div class="row justify-content-center justify-content-md-start">
+                            <div class="col-lg-12 static">
+                                <div class="slide-text text-center black">
+                                    <h2 class="owl-slide-animated owl-slide-title">"Satisfied"</h2>
+                                    <p class="owl-slide-animated owl-slide-subtitle">
+                                        <em>His dolor docendi fuisset ad, movet mucius diceret et qui. Esse ferri integre sit id.</em>
+                                    </p>
+                                    <div class="owl-slide-animated owl-slide-cta">Katrin - Student</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!--/owl-slide-->
+            </div>
+        </div>
+        <div id="icon_drag_mobile"></div>
+    </div>
+    
+ 
+ <ngb-carousel>
+    <ng-template ngbSlide>
+      <div class="picsum-img-wrapper">
+        <img src="assets/img/slides/slider-image-1.jpg" alt="Random first slide">
+      </div>
+      <div class="owl-slide cover" >
+        <div class="opacity-mask d-flex align-items-center" data-opacity-mask="rgba(0, 0, 0, 0.5)">
+          <div class="container">
+          <div class="row justify-content-center justify-content-md-end">
+            <div class="col-lg-6 static">
+            <div class="slide-text text-right white">
+              <h2 class="owl-slide-animated owl-slide-title">Attack Air<br>Max 720 Sage Low</h2>
+              <p class="owl-slide-animated owl-slide-subtitle">
+              Limited items available at this price
+              </p>
+              <div class="owl-slide-animated owl-slide-cta"><a class="btn_1" href="listing-grid-1-full.html" role="button">Shop Now</a></div>
+            </div>
+            </div>
+          </div>
+          </div>
+        </div>
+        </div>
+      <div class="carousel-caption">
+      
+      </div>
+    </ng-template>
+    <ng-template ngbSlide>
+      <div class="picsum-img-wrapper">
+        <img src="assets/img/slides/slider-image-2.jpg" alt="Random second slide">
+      </div>
+      <div class="row justify-content-center justify-content-md-start">
+        <div class="col-lg-6 static">
+            <div class="slide-text white">
+                <h2 class="owl-slide-animated owl-slide-title is-transitioned">"Awesome Experience"</h2>
+                <p class="owl-slide-animated owl-slide-subtitle is-transitioned">
+                    <em>His dolor docendi fuisset ad, movet mucius diceret et qui. Esse ferri integre sit id. Nec iusto eleifend definitionem ne, persius argumentum sed ut.</em>
+                </p>
+                <div class="owl-slide-animated owl-slide-cta is-transitioned"><small>Susan - Photographer</small></div>
+            </div>
+        </div>
+    </div>
+      <div class="carousel-caption">
+      
+      </div>
+    </ng-template>
+    <ng-template ngbSlide>
+      <div class="picsum-img-wrapper">
+        <img src="assets/img/slides/slider-image-3.jpg" alt="Random third slide">
+      </div>
+      <div class="owl-slide cover" style="background-image: url(/assets/img/slides/slider-image-1.jpg);">
+        <div class="opacity-mask d-flex align-items-center" data-opacity-mask="rgba(255, 255, 255, 0.5)">
+          <div class="container">
+          <div class="row justify-content-center justify-content-md-start">
+            <div class="col-lg-12 static">
+            <div class="slide-text text-center white">
+              <h2 class="owl-slide-animated owl-slide-title">Attack Air<br>Monarch IV SE</h2>
+              <p class="owl-slide-animated owl-slide-subtitle">
+              Lightweight cushioning and durable support with a Phylon midsole
+              </p>
+              <div class="owl-slide-animated owl-slide-cta"><a class="btn_1" href="listing-grid-1-full.html" role="button">Shop Now</a></div>
+            </div>
+            </div>
+          </div>
+          </div>
+        </div>
+        <!--/owl-slide-->
+        </div>
+      <div class="carousel-caption"> 
+      </div>
+    </ng-template>
+  </ngb-carousel>
+
+
+
+    <!--/carousel-->
+</div>
