--- a/src/app/homepage/slider/slider.component.html
+++ b/src/app/homepage/slider/slider.component.html
@@ -1,5 +1,4 @@
 
- 
  <ngb-carousel>
     <ng-template ngbSlide>
       <div class="picsum-img-wrapper">
@@ -77,3 +76,67 @@
       </div>
     </ng-template>
   </ngb-carousel>
+
+
+
+
+
+  <div id="carousel-home">
+    <div class="owl-carousel owl-theme">
+        <div class="owl-slide cover" style="background-image: url(/assets/img/about_2.svg);">
+            <div class="opacity-mask d-flex align-items-center" data-opacity-mask="rgba(0, 0, 0, 0.5)">
+                <div class="container">
+                    <div class="row justify-content-center justify-content-md-start">
+                        <div class="col-lg-6 static">
+                            <div class="slide-text white">
+                                <h2 class="owl-slide-animated owl-slide-title">"Awesome Experience"</h2>
+                                <p class="owl-slide-animated owl-slide-subtitle">
+                                    <em>His dolor docendi fuisset ad, movet mucius diceret et qui. Esse ferri integre sit id. Nec iusto eleifend definitionem ne, persius argumentum sed ut.</em>
+                                </p>
+                                <div class="owl-slide-animated owl-slide-cta"><small>Susan - Photographer</small></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--/owl-slide-->
+        <div class="owl-slide cover" style="background-image: url(assets/img/about_2.svg);">
+            <div class="opacity-mask d-flex align-items-center" data-opacity-mask="rgba(0, 0, 0, 0.5)">
+                <div class="container">
+                    <div class="row justify-content-center justify-content-md-start">
+                        <div class="col-lg-6 static">
+                            <div class="slide-text white">
+                                <h2 class="owl-slide-animated owl-slide-title">"Great Support"</h2>
+                                <p class="owl-slide-animated owl-slide-subtitle">
+                                    <em>His dolor docendi fuisset ad, movet mucius diceret et qui. Esse ferri integre sit id. Nec iusto eleifend definitionem ne.</em>
+                                </p>
+                                <div class="owl-slide-animated owl-slide-cta">Mary - Doctor</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--/owl-slide-->
+        <div class="owl-slide cover" style="background-image: url(assets/img/about_2.svg);">
+            <div class="opacity-mask d-flex align-items-center" data-opacity-mask="rgba(255, 255, 255, 0.5)">
+                <div class="container">
+                    <div class="row justify-content-center justify-content-md-start">
+                        <div class="col-lg-12 static">
+                            <div class="slide-text text-center black">
+                                <h2 class="owl-slide-animated owl-slide-title">"Satisfied"</h2>
+                                <p class="owl-slide-animated owl-slide-subtitle">
+                                    <em>His dolor docendi fuisset ad, movet mucius diceret et qui. Esse ferri integre sit id.</em>
+                                </p>
+                                <div class="owl-slide-animated owl-slide-cta">Katrin - Student</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!--/owl-slide-->
+        </div>
+    </div>
+    <div id="icon_drag_mobile"></div>
+</div>
